--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "wpe-build": "next build"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
