--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_WORDPRESS_API_URL=http://pccdigital.wpengine.com
+NEXT_PUBLIC_WORDPRESS_API_URL=https://pccdigital.wpengine.com/
 FAUSTWP_SECRET_KEY=3ed87068-580e-47b6-be8f-2c71cafce882
