--- a/package.json
+++ b/package.json
@@ -4,13 +4,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "wpe-build": "next build"
+    "wpe-build": "next build",
+    "generate": "gqty generate"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@faustjs/core": "^0.15.7",
+    "@faustjs/next": "^0.15.7",
     "graphql": "^16.3.0",
     "next": "latest",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.44.0",
+    "normalize.css": "^8.0.1"
+  },
+  "devDependencies": {
+    "@gqty/cli": "^3.3.1-alpha-74109b4.0",
+    "dotenv-flow": "^3.2.0"
   }
 }
